--- a/gal.html
+++ b/gal.html
@@ -201,7 +201,7 @@ body{
   <a href="g.html"><i class='fas fa-gopuram' style='font-size:24px'></i></i>GALLERY</a>
 <a href="#"><i class='fas fa-gopuram' style='font-size:24px'></i>BRAMHOSTAVAM</a>
 <a href="#"><i class='fas fa-gopuram' style='font-size:24px'></i>VIDEOS</a>
-<a href="samprokshanam.html"><i class='fas fa-gopuram' style='font-size:24px'></i>SAMPROKSHANAM 1995</a>
+<a href="samprokshanam.html"><i class='fas fa-gopuram' style='font-size:24px'></i>SAMPROKSHANAM 1996</a>
 <a href="mahapushkaram.html"><i class='fas fa-gopuram' style='font-size:24px'></i>MAHAPUSHKARAM 2018</a>
 <a href=""><i class='fas fa-gopuram' style='font-size:24px'></i>SAMPROKSHANAM 2013</a>
 <a href="contactus.html"><i class='fas fa-gopuram' style='font-size:24px'></i>CONTACT US </a>
@@ -406,23 +406,564 @@ img {vertical-align: middle;}
 <div class="slideshow-container">
 
 <div class="mySlides fade">
-  <div class="numbertext">1 / 3</div>
+  <div class="numbertext">001</div>
   <img src="varadha1.jpg" style="width:100%">
-  <div class="text">Caption Text</div>
+  <div class="text"></div>
 </div>
 
 <div class="mySlides fade">
-  <div class="numbertext">2 / 3</div>
+  <div class="numbertext">002</div>
   <img src="varadha2.jpg" style="width:100%">
-  <div class="text">Caption Two</div>
+  <div class="text"></div>
 </div>
 
 <div class="mySlides fade">
-  <div class="numbertext">3 / 3</div>
+  <div class="numbertext">003</div>
   <img src="varadha1.jpg" style="width:100%">
-  <div class="text">Caption Three</div>
+  <div class="text"></div>
+</div>
+<div class="mySlides fade">
+  <div class="numbertext">1  </div>
+  <img src="222 (1).jpeg" style="width:75%;height:500px;">
+  <div class="text"></div>
 </div>
 
+<div class="mySlides fade">
+  <div class="numbertext">2 / </div>
+  <img src="222 (2).jpeg" style="width:75%;height:500px;">
+  <div class="text"></div>
+</div>
+
+<div class="mySlides fade">
+  <div class="numbertext">3 </div>
+  <img src="222 (3).jpeg" style="width:75%;height:500px;">
+  <div class="text"></div>
+</div>
+<div class="mySlides fade">
+  <div class="numbertext">4  </div>
+  <img src="222 (4).jpeg" style="width:100%;height:500px;">
+ <div class="text"></div>
+</div>
+<div class="mySlides fade">
+  <div class="numbertext">5  </div>
+  <img src="222 (5).jpeg" style="width:75%;height:500px;">
+ <div class="text"></div>
+</div>
+<div class="mySlides fade">
+  <div class="numbertext">6 </div>
+  <img src="222 (6).jpeg" style="width:100%;height:500px;">
+  <div class="text"></div>
+</div>
+<div class="mySlides fade">
+  <div class="numbertext">7 </div>
+  <img src="222 (7).jpeg" style="width:100%;height:500px;">
+ <div class="text"></div>
+</div>
+	<div class="mySlides fade">
+  <div class="numbertext">8 </div>
+  <img src="222 (8).jpeg" style="width:100%;height:500px;">
+  <div class="text"></div>
+</div>
+	<div class="mySlides fade">
+  <div class="numbertext">9 </div>
+  <img src="222 (9).jpeg" style="width:100%;height:500px;">
+  <div class="text">mahapushkaram</div>
+</div>
+	<div class="mySlides fade">
+  <div class="numbertext">10 </div>
+  <img src="222 (10).jpeg" style="width:100%;height:500px;">
+ <div class="text"></div>
+</div>
+	<div class="mySlides fade">
+  <div class="numbertext">11 </div>
+  <img src="222 (11).jpeg" style="width:100%;height:500px;">
+  <div class="text"></div>
+</div>
+	<div class="mySlides fade">
+  <div class="numbertext">12 </div>
+  <img src="222 (12).jpeg" style="width:100%;height:500px;">
+  <div class="text"></div>
+</div>
+	<div class="mySlides fade">
+  <div class="numbertext">3 / </div>
+  <img src="222 (13).jpeg" style="width:100%;height:500px;">
+  <div class="text"></div>
+</div>
+	<div class="mySlides fade">
+  <div class="numbertext">13 </div>
+  <img src="222 (14).jpeg" style="width:100%;height:500px;">
+  <div class="text"></div>
+</div>
+	<div class="mySlides fade">
+  <div class="numbertext">14 </div>
+  <img src="222 (15).jpeg" style="width:100%;height:500px;">
+  <div class="text"></div>
+</div>
+	<div class="mySlides fade">
+  <div class="numbertext">15 </div>
+  <img src="222 (16).jpeg" style="width:100%;height:500px;">
+  <div class="text"></div>
+</div>
+	<div class="mySlides fade">
+  <div class="numbertext">16 </div>
+  <img src="222 (17).jpeg" style="width:100%;height:500px;">
+  <div class="text"></div>
+</div>
+	<div class="mySlides fade">
+  <div class="numbertext">17 </div>
+  <img src="222 (18).jpeg" style="width:100%;height:500px;">
+  <div class="text"></div>
+</div>
+	<div class="mySlides fade">
+  <div class="numbertext">18 </div>
+  <img src="222 (19).jpeg" style="width:100%;height:500px;">
+  <div class="text"></div>
+</div>
+	<div class="mySlides fade">
+  <div class="numbertext">19 </div>
+  <img src="222 (20).jpeg" style="width:100%;height:500px;">
+  <div class="text"></div>
+</div>
+	<div class="mySlides fade">
+  <div class="numbertext">20 </div>
+  <img src="222 (21).jpeg" style="width:100%;height:500px;">
+  <div class="text"></div>
+</div>
+	<div class="mySlides fade">
+  <div class="numbertext">21 </div>
+  <img src="222 (22).jpeg" style="width:100%;height:500px;">
+  <div class="text"></div>
+</div>
+	<div class="mySlides fade">
+  <div class="numbertext">22</div>
+  <img src="222 (23).jpeg" style="width:100%;height:500px;">
+  <div class="text"></div>
+</div>
+	<div class="mySlides fade">
+  <div class="numbertext">23 </div>
+  <img src="222 (24).jpeg" style="width:100%;height:500px;">
+  <div class="text"></div>
+</div>
+	<div class="mySlides fade">
+  <div class="numbertext">24 </div>
+  <img src="222 (25).jpeg" style="width:100%;height:500px;">
+  <div class="text">mahapushkaram</div>
+</div>
+	<div class="mySlides fade">
+  <div class="numbertext">25 </div>
+  <img src="222 (26).jpeg" style="width:100%;height:500px;">
+ <div class="text"></div>
+</div>
+	<div class="mySlides fade">
+  <div class="numbertext">26 </div>
+  <img src="222 (27).jpeg" style="width:100%;height:500px;">
+  <div class="text"></div>
+</div>
+	<div class="mySlides fade">
+  <div class="numbertext">27 </div>
+  <img src="222 (28).jpeg" style="width:100%;height:500px;">
+ <div class="text"></div>
+</div>
+	<div class="mySlides fade">
+  <div class="numbertext">28 </div>
+  <img src="222 (29).jpeg" style="width:100%;height:500px;">
+  <div class="text"></div>
+</div>
+	<div class="mySlides fade">
+  <div class="numbertext">29 </div>
+  <img src="222 (30).jpeg" style="width:100%;height:500px;">
+ <div class="text"></div>
+</div>
+	<div class="mySlides fade">
+  <div class="numbertext">30 </div>
+  <img src="222 (31).jpeg" style="width:100%;height:500px;">
+  <div class="text"></div>
+</div>
+	<div class="mySlides fade">
+  <div class="numbertext">40 </div>
+  <img src="222 (32).jpeg" style="width:100%;height:500px;">
+  <div class="text"></div>
+</div>
+	<div class="mySlides fade">
+  <div class="numbertext">41 </div>
+  <img src="222 (33).jpeg" style="width:100%;height:500px;">
+  <div class="text"></div>
+</div>
+	<div class="mySlides fade">
+  <div class="numbertext">42 </div>
+  <img src="222 (34).jpeg" style="width:100%;height:500px;">
+  <div class="text"></div>
+</div>
+	<div class="mySlides fade">
+  <div class="numbertext">42 </div>
+  <img src="222 (35).jpeg" style="width:100%;height:500px;">
+  <div class="text"></div>
+</div>
+	<div class="mySlides fade">
+  <div class="numbertext">42 </div>
+  <img src="222 (36).jpeg" style="width:100%;height:500px;">
+  <div class="text"></div>
+</div>
+	<div class="mySlides fade">
+  <div class="numbertext">42 </div>
+  <img src="222 (37).jpeg" style="width:100%;height:500px;">
+  <div class="text"></div>
+</div>
+	<div class="mySlides fade">
+  <div class="numbertext">42 </div>
+  <img src="222 (38).jpeg" style="width:100%;height:500px;">
+  <div class="text"></div>
+</div>
+	<div class="mySlides fade">
+  <div class="numbertext">42 </div>
+  <img src="sv1.jpeg" style="width:100%;height:500px;">
+  <div class="text"></div>
+</div>
+	<div class="mySlides fade">
+  <div class="numbertext">42 </div>
+  <img src="sv2.jpeg" style="width:100%;height:500px;">
+  <div class="text"></div>
+</div>
+	<div class="mySlides fade">
+  <div class="numbertext">42 </div>
+  <img src="sv3.jpeg" style="width:100%;height:500px;">
+  <div class="text"></div>
+</div>
+	<div class="mySlides fade">
+  <div class="numbertext">42 </div>
+  <img src="sv4.jpeg" style="width:100%;height:500px;">
+  <div class="text"></div>
+</div>
+	<div class="mySlides fade">
+  <div class="numbertext">42 </div>
+  <img src="sv6.jpeg" style="width:100%;height:500px;">
+  <div class="text"></div>
+</div>
+	<div class="mySlides fade">
+  <div class="numbertext">42 </div>
+  <img src="sv7.jpeg" style="width:100%;height:500px;">
+  <div class="text"></div>
+</div>
+	<div class="mySlides fade">
+  <div class="numbertext">42 </div>
+  <img src="000 (1).jpeg" style="width:100%;height:500px;">
+  <div class="text"></div>
+</div>
+	<div class="mySlides fade">
+  <div class="numbertext">42 </div>
+  <img src="000 (2).jpeg" style="width:100%;height:500px;">
+  <div class="text"></div>
+</div>
+	<div class="mySlides fade">
+  <div class="numbertext">42 </div>
+  <img src="000 (3).jpeg" style="width:100%;height:500px;">
+  <div class="text"></div>
+</div>
+	<div class="mySlides fade">
+  <div class="numbertext">42 </div>
+  <img src="000 (4).jpeg" style="width:100%;height:500px;">
+  <div class="text"></div>
+</div>
+	<div class="mySlides fade">
+  <div class="numbertext">42 </div>
+  <img src="000 (5).jpeg" style="width:100%;height:500px;">
+  <div class="text"></div>
+</div>
+	<div class="mySlides fade">
+  <div class="numbertext">42 </div>
+  <img src="000 (6).jpeg" style="width:100%;height:500px;">
+  <div class="text"></div>
+</div>
+	<div class="mySlides fade">
+  <div class="numbertext">42 </div>
+  <img src="000 (7).jpeg" style="width:100%;height:500px;">
+  <div class="text"></div>
+</div>
+	<div class="mySlides fade">
+  <div class="numbertext">42 </div>
+  <img src="000 (8).jpeg" style="width:100%;height:500px;">
+  <div class="text"></div>
+</div>
+	<div class="mySlides fade">
+  <div class="numbertext">42 </div>
+  <img src="000 (9).jpeg" style="width:100%;height:500px;">
+  <div class="text"></div>
+</div>
+	<div class="mySlides fade">
+  <div class="numbertext">42 </div>
+  <img src="000 (10).jpeg" style="width:100%;height:500px;">
+  <div class="text"></div>
+</div>
+	<div class="mySlides fade">
+  <div class="numbertext">42 </div>
+  <img src="000 (11).jpeg" style="width:100%;height:500px;">
+  <div class="text"></div>
+</div>
+	<div class="mySlides fade">
+  <div class="numbertext">42 </div>
+  <img src="000 (12).jpeg" style="width:100%;height:500px;">
+  <div class="text"></div>
+</div>
+	<div class="mySlides fade">
+  <div class="numbertext">42 </div>
+  <img src="000 (13).jpeg" style="width:100%;height:500px;">
+  <div class="text"></div>
+</div>
+	<div class="mySlides fade">
+  <div class="numbertext">42 </div>
+  <img src="000 (14).jpeg" style="width:100%;height:500px;">
+  <div class="text"></div>
+</div>
+	<div class="mySlides fade">
+  <div class="numbertext">42 </div>
+  <img src="000 (15).jpeg" style="width:100%;height:500px;">
+  <div class="text"></div>
+</div>
+	<div class="mySlides fade">
+  <div class="numbertext">42 </div>
+  <img src="000 (16).jpeg" style="width:100%;height:500px;">
+  <div class="text"></div>
+</div>
+	<div class="mySlides fade">
+  <div class="numbertext">42 </div>
+  <img src="000 (17).jpeg" style="width:100%;height:500px;">
+  <div class="text"></div>
+</div>
+	<div class="mySlides fade">
+  <div class="numbertext">42 </div>
+  <img src="000 (18).jpeg" style="width:100%;height:500px;">
+  <div class="text"></div>
+</div>
+	<div class="mySlides fade">
+  <div class="numbertext">42 </div>
+  <img src="000 (19).jpeg" style="width:100%;height:500px;">
+  <div class="text"></div>
+</div>
+	<div class="mySlides fade">
+  <div class="numbertext">42 </div>
+  <img src="000 (20).jpeg" style="width:100%;height:500px;">
+  <div class="text"></div>
+</div>
+	<div class="mySlides fade">
+  <div class="numbertext">42 </div>
+  <img src="000 (21).jpeg" style="width:100%;height:500px;">
+  <div class="text"></div>
+</div>
+	<div class="mySlides fade">
+  <div class="numbertext">42 </div>
+  <img src="000 (22).jpeg" style="width:100%;height:500px;">
+  <div class="text"></div>
+</div>
+	<div class="mySlides fade">
+  <div class="numbertext">42 </div>
+  <img src="000 (23).jpeg" style="width:100%;height:500px;">
+  <div class="text"></div>
+</div>
+	<div class="mySlides fade">
+  <div class="numbertext">42 </div>
+  <img src="000 (24).jpeg" style="width:100%;height:500px;">
+  <div class="text"></div>
+</div>
+	<div class="mySlides fade">
+  <div class="numbertext">42 </div>
+  <img src="000 (25).jpeg" style="width:100%;height:500px;">
+  <div class="text"></div>
+</div>
+	<div class="mySlides fade">
+  <div class="numbertext">42 </div>
+  <img src="000 (26).jpeg" style="width:100%;height:500px;">
+  <div class="text"></div>
+</div>
+	<div class="mySlides fade">
+  <div class="numbertext">42 </div>
+  <img src="000 (27).jpeg" style="width:100%;height:500px;">
+  <div class="text"></div>
+</div>
+	<div class="mySlides fade">
+  <div class="numbertext">42 </div>
+  <img src="000 (28).jpeg" style="width:100%;height:500px;">
+  <div class="text"></div>
+</div>
+	<div class="mySlides fade">
+  <div class="numbertext">42 </div>
+  <img src="000 (29).jpeg" style="width:100%;height:500px;">
+  <div class="text"></div>
+</div>
+	<div class="mySlides fade">
+  <div class="numbertext">42 </div>
+  <img src="000 (30).jpeg" style="width:100%;height:500px;">
+  <div class="text"></div>
+</div>
+	<div class="mySlides fade">
+  <div class="numbertext">42 </div>
+  <img src="000 (31).jpeg" style="width:100%;height:500px;">
+  <div class="text"></div>
+</div>
+	<div class="mySlides fade">
+  <div class="numbertext">42 </div>
+  <img src="000 (32).jpeg" style="width:100%;height:500px;">
+  <div class="text"></div>
+</div>
+	<div class="mySlides fade">
+  <div class="numbertext">42 </div>
+  <img src="000 (33).jpeg" style="width:100%;height:500px;">
+  <div class="text"></div>
+</div>
+	<div class="mySlides fade">
+  <div class="numbertext">42 </div>
+  <img src="000 (34).jpeg" style="width:100%;height:500px;">
+  <div class="text"></div>
+</div>
+	<div class="mySlides fade">
+  <div class="numbertext">42 </div>
+  <img src="000 (35).jpeg" style="width:100%;height:500px;">
+  <div class="text"></div>
+</div>
+	<div class="mySlides fade">
+  <div class="numbertext">42 </div>
+  <img src="000 (36).jpeg" style="width:100%;height:500px;">
+  <div class="text"></div>
+</div>
+	<div class="mySlides fade">
+  <div class="numbertext">42 </div>
+  <img src="000 (37).jpeg" style="width:100%;height:500px;">
+  <div class="text"></div>
+</div>
+	<div class="mySlides fade">
+  <div class="numbertext">42 </div>
+  <img src="000 (38).jpeg" style="width:100%;height:500px;">
+  <div class="text"></div>
+</div>
+	<div class="mySlides fade">
+  <div class="numbertext">42 </div>
+  <img src="000 (39).jpeg" style="width:100%;height:500px;">
+  <div class="text"></div>
+</div>
+	<div class="mySlides fade">
+  <div class="numbertext">42 </div>
+  <img src="000 (40).jpeg" style="width:100%;height:500px;">
+  <div class="text"></div>
+</div>
+	<div class="mySlides fade">
+  <div class="numbertext">42 </div>
+  <img src="000 (41).jpeg" style="width:100%;height:500px;">
+  <div class="text"></div>
+</div>
+	<div class="mySlides fade">
+  <div class="numbertext">42 </div>
+  <img src="000 (42).jpeg" style="width:100%;height:500px;">
+  <div class="text"></div>
+</div>
+	<div class="mySlides fade">
+  <div class="numbertext">42 </div>
+  <img src="000 (43).jpeg" style="width:100%;height:500px;">
+  <div class="text"></div>
+</div>
+	<div class="mySlides fade">
+  <div class="numbertext">42 </div>
+  <img src="000 (44).jpeg" style="width:100%;height:500px;">
+  <div class="text"></div>
+</div>
+	<div class="mySlides fade">
+  <div class="numbertext">42 </div>
+  <img src="000 (45).jpeg" style="width:100%;height:500px;">
+  <div class="text"></div>
+</div>
+	<div class="mySlides fade">
+  <div class="numbertext">42 </div>
+  <img src="000 (46).jpeg" style="width:100%;height:500px;">
+  <div class="text"></div>
+</div>
+	<div class="mySlides fade">
+  <div class="numbertext">42 </div>
+  <img src="000 (47).jpeg" style="width:100%;height:500px;">
+  <div class="text"></div>
+</div>
+	<div class="mySlides fade">
+  <div class="numbertext">42 </div>
+  <img src="000 (48).jpeg" style="width:100%;height:500px;">
+  <div class="text"></div>
+</div>
+	<div class="mySlides fade">
+  <div class="numbertext">42 </div>
+  <img src="000 (49).jpeg" style="width:100%;height:500px;">
+  <div class="text"></div>
+</div>
+	<div class="mySlides fade">
+  <div class="numbertext">42 </div>
+  <img src="000 (50).jpeg" style="width:100%;height:500px;">
+  <div class="text"></div>
+</div>
+	<div class="mySlides fade">
+  <div class="numbertext">42 </div>
+  <img src="000 (51).jpeg" style="width:100%;height:500px;">
+  <div class="text"></div>
+</div>
+	<div class="mySlides fade">
+  <div class="numbertext">42 </div>
+  <img src="000 (52).jpeg" style="width:100%;height:500px;">
+  <div class="text"></div>
+</div>
+	<div class="mySlides fade">
+  <div class="numbertext">42 </div>
+  <img src="000 (53).jpeg" style="width:100%;height:500px;">
+  <div class="text"></div>
+</div>
+	<div class="mySlides fade">
+  <div class="numbertext">42 </div>
+  <img src="000 (54).jpeg" style="width:100%;height:500px;">
+  <div class="text"></div>
+</div>
+	<div class="mySlides fade">
+  <div class="numbertext">42 </div>
+  <img src="000 (55).jpeg" style="width:100%;height:500px;">
+  <div class="text"></div>
+</div>
+	<div class="mySlides fade">
+  <div class="numbertext">42 </div>
+  <img src="000 (56).jpeg" style="width:100%;height:500px;">
+  <div class="text"></div>
+</div>
+	<div class="mySlides fade">
+  <div class="numbertext">42 </div>
+  <img src="000 (57).jpeg" style="width:100%;height:500px;">
+  <div class="text"></div>
+</div>
+	<div class="mySlides fade">
+  <div class="numbertext">42 </div>
+  <img src="000 (58).jpeg" style="width:100%;height:500px;">
+  <div class="text"></div>
+</div>
+	<div class="mySlides fade">
+  <div class="numbertext">42 </div>
+  <img src="000 (59).jpeg" style="width:100%;height:500px;">
+  <div class="text"></div>
+</div>
+	<div class="mySlides fade">
+  <div class="numbertext">42 </div>
+  <img src="000 (60).jpeg" style="width:100%;height:500px;">
+  <div class="text"></div>
+</div>
+	<div class="mySlides fade">
+  <div class="numbertext">42 </div>
+  <img src="000 (61).jpeg" style="width:100%;height:500px;">
+  <div class="text"></div>
+</div>
+	<div class="mySlides fade">
+  <div class="numbertext">42 </div>
+  <img src="000 (62).jpeg" style="width:100%;height:500px;">
+  <div class="text"></div>
+</div>
+	<div class="mySlides fade">
+  <div class="numbertext">42 </div>
+  <img src="000 (63).jpeg" style="width:100%;height:500px;">
+  <div class="text"></div>
+</div>
+	<div class="mySlides fade">
+  <div class="numbertext">42 </div>
+  <img src="000 (64).jpeg" style="width:100%;height:500px;">
+  <div class="text"></div>
+</div>
 <a class="prev" onclick="plusSlides(-1)">&#10094;</a>
 <a class="next" onclick="plusSlides(1)">&#10095;</a>
 
