--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@ p  {
   font-family: courier;
   font-size: 100%;
 text-align: center;
-word-break: break-all;
+word-break: break-word;
 text-shadow: -1px 0 black, 0 1px black, 1px 0 black, 0 -1px black;
 }
 </style>
