--- a/index.html
+++ b/index.html
@@ -10,11 +10,11 @@
 <link rel="apple-touch-icon-precomposed" sizes="120x120" href="fav/apple-touch-icon-57x57.png" />
 <link rel="apple-touch-icon-precomposed" sizes="76x76" href="fav/apple-touch-icon-57x57.png" />
 <link rel="apple-touch-icon-precomposed" sizes="152x152"href="fav/apple-touch-icon-57x57.png" />
-<link rel="icon" type="image/png" href="favicon-196x196.png" sizes="196x196" />
-<link rel="icon" type="image/png" href="favicon-96x96.png" sizes="96x96" />
-<link rel="icon" type="image/png" href="favicon-32x32.png" sizes="32x32" />
-<link rel="icon" type="image/png" href="favicon-16x16.png" sizes="16x16" />
-<link rel="icon" type="image/png" href="favicon-128.png" sizes="128x128" />
+<link rel="icon" type="image/png" href="fav/favicon-196x196.png" sizes="196x196" />
+<link rel="icon" type="image/png" href="fav/favicon-96x96.png" sizes="96x96" />
+<link rel="icon" type="image/png" href="fav/favicon-32x32.png" sizes="32x32" />
+<link rel="icon" type="image/png" href="fav/favicon-16x16.png" sizes="16x16" />
+<link rel="icon" type="image/png" href="fav/favicon-128.png" sizes="128x128" />
 <meta name="application-name" content="&nbsp;"/>
 <meta name="msapplication-TileColor" content="#FFFFFF" />
 <meta name="msapplication-TileImage" content="fav/mstile-144x144.png" />
