--- a/contactus.html
+++ b/contactus.html
@@ -1,6 +1,28 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>	
+<head>
+	<meta name='viewport' content='width=device-width, initial-scale=1'>
+	<link rel="apple-touch-icon-precomposed" sizes="57x57" href="fav/apple-touch-icon-57x57.png" />
+<link rel="apple-touch-icon-precomposed" sizes="114x114" href="fav/apple-touch-icon-57x57.png" />
+<link rel="apple-touch-icon-precomposed" sizes="72x72" href="fav/apple-touch-icon-57x57.png" />
+<link rel="apple-touch-icon-precomposed" sizes="144x144" href="fav/apple-touch-icon-57x57.png" />
+<link rel="apple-touch-icon-precomposed" sizes="60x60" href="fav/apple-touch-icon-57x57.png" />
+<link rel="apple-touch-icon-precomposed" sizes="120x120" href="fav/apple-touch-icon-57x57.png" />
+<link rel="apple-touch-icon-precomposed" sizes="76x76" href="fav/apple-touch-icon-57x57.png" />
+<link rel="apple-touch-icon-precomposed" sizes="152x152"href="fav/apple-touch-icon-57x57.png" />
+<link rel="icon" type="image/png" href="fav/favicon-196x196.png" sizes="196x196" />
+<link rel="icon" type="image/png" href="fav/favicon-96x96.png" sizes="96x96" />
+<link rel="icon" type="image/png" href="fav/favicon-32x32.png" sizes="32x32" />
+<link rel="icon" type="image/png" href="fav/favicon-16x16.png" sizes="16x16" />
+<link rel="icon" type="image/png" href="fav/favicon-128.png" sizes="128x128" />
+<meta name="application-name" content="&nbsp;"/>
+<meta name="msapplication-TileColor" content="#FFFFFF" />
+<meta name="msapplication-TileImage" content="fav/mstile-144x144.png" />
+<meta name="msapplication-square70x70logo" content="fav/mstile-70x70.png" />
+<meta name="msapplication-square150x150logo" content="fav/mstile-150x150.png" />
+<meta name="msapplication-wide310x150logo" content="fav/mstile-310x150.png" />
+<meta name="msapplication-square310x310logo" content="fav/mstile-310x310.png" />
+
 <style> 
 #example1 {
   background: url(fg.jpg) right bottom no-repeat, url(fg.jpg) left top repeat;
@@ -24,7 +46,7 @@ margin-bottom: 25px;
 }
 </style>
 
-<meta name='viewport' content='width=device-width, initial-scale=1'>
+
 <script src='https://kit.fontawesome.com/a076d05399.js'></script>
 <!--Get your own code at fontawesome.com-->
 	<title>NELLAI VARADHARAJA PERUMAL KOVIL</title>
@@ -70,11 +92,13 @@ h1 {
 text-align: center;
 text-shadow: 2px 2px 4px #000000;
 }
+
 p  {
   color: white;
   font-family: courier;
-  font-size: 90%;
+  font-size: 100%;
 text-align: center;
+word-break: break-word;
 text-shadow: -1px 0 black, 0 1px black, 1px 0 black, 0 -1px black;
 }
 </style>
@@ -139,7 +163,7 @@ body{
 
 .navbar a {
   float: left;
-  font-size: 9px;
+  font-size: 10px;
   color: white;
   text-align: center;
   padding: 14px 16px;
@@ -201,7 +225,7 @@ body{
   <a href="g.html"><i class='fas fa-gopuram' style='font-size:24px'></i></i>GALLERY</a>
 <a href="#"><i class='fas fa-gopuram' style='font-size:24px'></i>BRAMHOSTAVAM</a>
 <a href="#"><i class='fas fa-gopuram' style='font-size:24px'></i>VIDEOS</a>
-<a href="samprokshanam.html"><i class='fas fa-gopuram' style='font-size:24px'></i>SAMPROKSHANAM 1995</a>
+<a href="samprokshanam.html"><i class='fas fa-gopuram' style='font-size:24px'></i>SAMPROKSHANAM 1996</a>
 <a href="mahapushkaram.html"><i class='fas fa-gopuram' style='font-size:24px'></i>MAHAPUSHKARAM 2018</a>
 <a href=""><i class='fas fa-gopuram' style='font-size:24px'></i>SAMPROKSHANAM 2013</a>
 <a href="contactus.html"><i class='fas fa-gopuram' style='font-size:24px'></i>CONTACT US </a>
@@ -219,6 +243,7 @@ body{
 
 </style>
 </style>
+
 
 
 
