--- a/bram.html
+++ b/bram.html
@@ -505,6 +505,12 @@ img {vertical-align: relative;}
 	</div>
 <br>
 
+<a class="prev" onclick="plusSlides(-1)">&#10094;</a>
+<a class="next" onclick="plusSlides(1)">&#10095;</a>
+
+</div>
+<br>
+
 
 <script>
 var slideIndex = 1;
