--- a/samprokshanam.html
+++ b/samprokshanam.html
@@ -223,7 +223,7 @@ body{
 <div class="navbar">
   <a href="index.html"><i class='fas fa-gopuram' style='font-size:24px'></i>HOME</a>
   <a href="g.html"><i class='fas fa-gopuram' style='font-size:24px'></i></i>GALLERY</a>
-<a href="#"><i class='fas fa-gopuram' style='font-size:24px'></i>BRAMHOSTAVAM</a>
+<a href="bram.html"><i class='fas fa-gopuram' style='font-size:24px'></i>BRAMHOSTAVAM</a>
 <a href="#"><i class='fas fa-gopuram' style='font-size:24px'></i>VIDEOS</a>
 <a href="samprokshanam.html"><i class='fas fa-gopuram' style='font-size:24px'></i>SAMPROKSHANAM 1996</a>
 <a href="mahapushkaram.html"><i class='fas fa-gopuram' style='font-size:24px'></i>MAHAPUSHKARAM 2018</a>
