--- a/bram.html
+++ b/bram.html
@@ -440,7 +440,7 @@ img {vertical-align: relative;}
 </style>
 </head>
 <body>
-<h1 style="text-align:center">BRAMHOSTAVAM PHOTOS</h1>
+
 
 <h1><div class="slideshow-container">
 
@@ -505,11 +505,6 @@ img {vertical-align: relative;}
 	</div>
 <br>
 
-<a class="prev" onclick="plusSlides(-1)">&#10094;</a>
-<a class="next" onclick="plusSlides(1)">&#10095;</a>
-
-</div>
-<br>
 
 
 <script>
@@ -543,6 +538,82 @@ function showSlides(n) {
 	</h1>
 
 
+
+<!DOCTYPE html>
+<html>
+<head>
+<style>
+* {
+  box-sizing: border-box;
+}
+
+.column {
+  float: left;
+  width: 33.33%;
+  padding: 5px;
+}
+#main {
+  width: 70px;
+  height: 300px;
+  border: 1px solid #c3c3c3;
+  display: flex;
+  flex-wrap: wrap;
+  align-content: center;
+}
+
+#main div {
+  width: 100px;
+  height: 100px;
+}
+/* Clearfix (clear floats) */
+.row::after {
+  content: "";
+  clear: both;
+  display: table;
+}
+</style>
+</head>
+<body>
+<h1 style="text-align:center">BRAMHOSTAVAM PHOTOS</h1>
+<h1 style="text-align:center"></h1>
+
+<h1><div class="row">
+  <div class="column">
+    <img src="sv2.jpeg" style="width:250px;height:300px;" onclick="openModal();currentSlide(1)" class="hover-shadow cursor">
+</div>
+  <div class="column">
+    <img src="222 (3).jpeg" style="width:250px;height:300px;" onclick="openModal();currentSlide(2)" class="hover-shadow cursor">
+  </div>
+  <div class="column">
+    <img src="222 (1).jpeg" style="width:250px;height:300px;" onclick="openModal();currentSlide(3)" class="hover-shadow cursor">
+  </div>
+  <div class="column">
+    <img src="222 (8).jpeg" style="width:250px;height:300px;" onclick="openModal();currentSlide(4)" class="hover-shadow cursor">
+</div>
+ <div class="column">
+    <img src="222 (24).jpeg" style="width:250px;height:300px;" onclick="openModal();currentSlide(5)" class="hover-shadow cursor">
+</div>
+ <div class="column">
+    <img src="000 (12).jpeg" style="width:250px;height:300px;" onclick="openModal();currentSlide(6)" class="hover-shadow cursor">
+</div>
+ <div class="column">
+    <img src="000 (4).jpeg" style="width:250px;height:300px;" onclick="openModal();currentSlide(7)" class="hover-shadow cursor">
+</div>
+ <div class="column">
+    <img src="000 (27).jpeg" style="width:250px;height:300px;" onclick="openModal();currentSlide(8)" class="hover-shadow cursor">
+</div>
+ <div class="column">
+    <img src="000 (38).jpeg" style="width:250px;height:300px;" onclick="openModal();currentSlide(9)" class="hover-shadow cursor">
+</div>
+ <div class="column">
+    <img src="000 (30).jpeg" style="width:250px;height:300px;" onclick="openModal();currentSlide(10)" class="hover-shadow cursor">
+</div>
+ <div class="column">
+    <img src="000 (7).jpeg" style="width:250px;height:300px;" onclick="openModal();currentSlide(11)" class="hover-shadow cursor">
+</div>
+
+  
+</div>
 
 
 
