--- a/bram.html
+++ b/bram.html
@@ -501,10 +501,11 @@ img {vertical-align: relative;}
   <img src="000 (7).jpeg" style="width:75%;height:500px;">
  <div class="text">THER THIRUNAL </div>
 </div>
-</div>
-	</div>
-<br>
+<a class="prev" onclick="plusSlides(-1)">&#10094;</a>
+<a class="next" onclick="plusSlides(1)">&#10095;</a>
 
+</div>
+<br>
 
 
 <script>
@@ -536,7 +537,6 @@ function showSlides(n) {
 }
 	</script>
 	</h1>
-
 
 
 <!DOCTYPE html>
