--- a/g.html
+++ b/g.html
@@ -442,7 +442,26 @@ img {vertical-align: relative;}
 <body>
 
 <h1><div class="slideshow-container">
-
+<div class="mySlides fade">
+  <div class="numbertext">1  </div>
+  <img src="r (1).jpeg" style="width:75%;height:500px;">
+  <div class="text"></div>
+</div>
+<div class="mySlides fade">
+  <div class="numbertext">1  </div>
+  <img src="r (2).jpeg" style="width:75%;height:500px;">
+  <div class="text"></div>
+</div>
+<div class="mySlides fade">
+  <div class="numbertext">1  </div>
+  <img src="r (3).jpeg" style="width:75%;height:500px;">
+  <div class="text"></div>
+</div>
+<div class="mySlides fade">
+  <div class="numbertext">1  </div>
+  <img src="r (4).jpeg" style="width:75%;height:500px;">
+  <div class="text"></div>
+</div>
 <div class="mySlides fade">
   <div class="numbertext">1  </div>
   <img src="222 (1).jpeg" style="width:75%;height:500px;">
@@ -1065,7 +1084,19 @@ function showSlides(n) {
 
 
     <h1><div class="row">
-  <div class="column">
+ <div class="column">
+    <img src="r (1).jpeg" style="width:250px;height:300px;" onclick="openModal();currentSlide(1)" class="hover-shadow cursor">
+</div>
+<div class="column">
+    <img src="r (2).jpeg" style="width:250px;height:300px;" onclick="openModal();currentSlide(1)" class="hover-shadow cursor">
+</div>
+<div class="column">
+    <img src="r (3).jpeg" style="width:250px;height:300px;" onclick="openModal();currentSlide(1)" class="hover-shadow cursor">
+</div>
+<div class="column">
+    <img src="r (4).jpeg" style="width:250px;height:300px;" onclick="openModal();currentSlide(1)" class="hover-shadow cursor">
+</div>
+<div class="column">
     <img src="222 (1).jpeg" style="width:250px;height:300px;" onclick="openModal();currentSlide(1)" class="hover-shadow cursor">
 </div>
   <div class="column">
