--- a/g.html
+++ b/g.html
@@ -444,6 +444,16 @@ img {vertical-align: relative;}
 <h1><div class="slideshow-container">
 <div class="mySlides fade">
   <div class="numbertext">1  </div>
+  <img src="q (1).jpeg" style="width:75%;height:500px;">
+  <div class="text"></div>
+</div>
+<div class="mySlides fade">
+  <div class="numbertext">1  </div>
+  <img src="q (1).jpeg" style="width:75%;height:500px;">
+  <div class="text"></div>
+</div>
+<div class="mySlides fade">
+  <div class="numbertext">1  </div>
   <img src="r (1).jpeg" style="width:75%;height:500px;">
   <div class="text"></div>
 </div>
@@ -1084,7 +1094,13 @@ function showSlides(n) {
 
 
     <h1><div class="row">
- <div class="column">
+<div class="column">
+    <img src="q (1).jpeg" style="width:250px;height:300px;" onclick="openModal();currentSlide(1)" class="hover-shadow cursor">
+</div>
+<div class="column">
+    <img src="q (2).jpeg" style="width:250px;height:300px;" onclick="openModal();currentSlide(1)" class="hover-shadow cursor">
+</div>
+<div class="column">
     <img src="r (1).jpeg" style="width:250px;height:300px;" onclick="openModal();currentSlide(1)" class="hover-shadow cursor">
 </div>
 <div class="column">
