--- a/g.html
+++ b/g.html
@@ -444,7 +444,82 @@ img {vertical-align: relative;}
 <h1><div class="slideshow-container">
 <div class="mySlides fade">
   <div class="numbertext">1  </div>
-  <img src="q (1).jpeg" style="width:75%;height:500px;">
+  <img src="d (16).jpeg" style="width:75%;height:500px;">
+  <div class="text"></div>
+</div>
+<div class="mySlides fade">
+  <div class="numbertext">1  </div>
+  <img src="d (15).jpeg" style="width:75%;height:500px;">
+  <div class="text"></div>
+</div>
+<div class="mySlides fade">
+  <div class="numbertext">1  </div>
+  <img src="d (14).jpeg" style="width:75%;height:500px;">
+  <div class="text"></div>
+</div>
+<div class="mySlides fade">
+  <div class="numbertext">1  </div>
+  <img src="d (13).jpeg" style="width:75%;height:500px;">
+  <div class="text"></div>
+</div>	
+<div class="mySlides fade">
+  <div class="numbertext">1  </div>
+  <img src="d (12).jpeg" style="width:75%;height:500px;">
+  <div class="text"></div>
+</div>
+<div class="mySlides fade">
+  <div class="numbertext">1  </div>
+  <img src="d (11).jpeg" style="width:75%;height:500px;">
+  <div class="text"></div>
+</div>
+<div class="mySlides fade">
+  <div class="numbertext">1  </div>
+  <img src="d (10).jpeg" style="width:75%;height:500px;">
+  <div class="text">KILAKU ANCHANEYAR</div>
+</div>
+<div class="mySlides fade">
+  <div class="numbertext">1  </div>
+  <img src="d (9).jpeg" style="width:75%;height:500px;">
+  <div class="text"></div>
+</div>
+<div class="mySlides fade">
+  <div class="numbertext">1  </div>
+  <img src="d (8).jpeg" style="width:75%;height:500px;">
+  <div class="text"></div>
+</div>
+<div class="mySlides fade">
+  <div class="numbertext">1  </div>
+  <img src="d (7).jpeg" style="width:75%;height:500px;">
+  <div class="text"></div>
+</div>
+<div class="mySlides fade">
+  <div class="numbertext">1  </div>
+  <img src="d (6).jpeg" style="width:75%;height:500px;">
+  <div class="text"></div>
+</div>
+<div class="mySlides fade">
+  <div class="numbertext">1  </div>
+  <img src="d (5).jpeg" style="width:75%;height:500px;">
+  <div class="text"></div>
+</div>
+<div class="mySlides fade">
+  <div class="numbertext">1  </div>
+  <img src="d (4).jpeg" style="width:75%;height:500px;">
+  <div class="text">VIGANASACHARYA NAINISHARANYAM</div>
+</div>
+<div class="mySlides fade">
+  <div class="numbertext">1  </div>
+  <img src="d (3).jpeg" style="width:75%;height:500px;">
+  <div class="text"></div>
+</div>
+<div class="mySlides fade">
+  <div class="numbertext">1  </div>
+  <img src="d (2).jpeg" style="width:75%;height:500px;">
+  <div class="text"></div>
+</div>
+<div class="mySlides fade">
+  <div class="numbertext">1  </div>
+  <img src="d (1).jpeg" style="width:75%;height:500px;">
   <div class="text"></div>
 </div>
 <div class="mySlides fade">
@@ -1094,6 +1169,15 @@ function showSlides(n) {
 
 
     <h1><div class="row">
+<div class="column">
+    <img src="d (14).jpeg" style="width:250px;height:300px;" onclick="openModal();currentSlide(1)" class="hover-shadow cursor">
+</div>
+<div class="column">
+    <img src="d (15).jpeg" style="width:250px;height:300px;" onclick="openModal();currentSlide(1)" class="hover-shadow cursor">
+</div>
+<div class="column">
+    <img src="d (16).jpeg" style="width:250px;height:300px;" onclick="openModal();currentSlide(1)" class="hover-shadow cursor">
+</div>
 <div class="column">
     <img src="q (1).jpeg" style="width:250px;height:300px;" onclick="openModal();currentSlide(1)" class="hover-shadow cursor">
 </div>
