--- a/g.html
+++ b/g.html
@@ -1170,6 +1170,45 @@ function showSlides(n) {
 
     <h1><div class="row">
 <div class="column">
+    <img src="d (1).jpeg" style="width:250px;height:300px;" onclick="openModal();currentSlide(1)" class="hover-shadow cursor">
+</div>
+	<div class="column">
+    <img src="d (2).jpeg" style="width:250px;height:300px;" onclick="openModal();currentSlide(1)" class="hover-shadow cursor">
+</div>
+	<div class="column">
+    <img src="d (3).jpeg" style="width:250px;height:300px;" onclick="openModal();currentSlide(1)" class="hover-shadow cursor">
+</div>
+	<div class="column">
+    <img src="d (4).jpeg" style="width:250px;height:300px;" onclick="openModal();currentSlide(1)" class="hover-shadow cursor">
+</div>
+	<div class="column">
+    <img src="d (5).jpeg" style="width:250px;height:300px;" onclick="openModal();currentSlide(1)" class="hover-shadow cursor">
+</div>
+	<div class="column">
+    <img src="d (6).jpeg" style="width:250px;height:300px;" onclick="openModal();currentSlide(1)" class="hover-shadow cursor">
+</div>
+	<div class="column">
+    <img src="d (7).jpeg" style="width:250px;height:300px;" onclick="openModal();currentSlide(1)" class="hover-shadow cursor">
+</div>
+	<div class="column">
+    <img src="d (8).jpeg" style="width:250px;height:300px;" onclick="openModal();currentSlide(1)" class="hover-shadow cursor">
+</div>
+	<div class="column">
+    <img src="d (9).jpeg" style="width:250px;height:300px;" onclick="openModal();currentSlide(1)" class="hover-shadow cursor">
+</div>
+	<div class="column">
+    <img src="d (10).jpeg" style="width:250px;height:300px;" onclick="openModal();currentSlide(1)" class="hover-shadow cursor">
+</div>
+	<div class="column">
+    <img src="d (11).jpeg" style="width:250px;height:300px;" onclick="openModal();currentSlide(1)" class="hover-shadow cursor">
+</div>
+	<div class="column">
+    <img src="d (12).jpeg" style="width:250px;height:300px;" onclick="openModal();currentSlide(1)" class="hover-shadow cursor">
+</div>
+	<div class="column">
+    <img src="d (13).jpeg" style="width:250px;height:300px;" onclick="openModal();currentSlide(1)" class="hover-shadow cursor">
+</div>
+<div class="column">
     <img src="d (14).jpeg" style="width:250px;height:300px;" onclick="openModal();currentSlide(1)" class="hover-shadow cursor">
 </div>
 <div class="column">
