--- a/g.html
+++ b/g.html
@@ -315,7 +315,7 @@ html {
    </style>
   </head>
   <body>
-    <a href="gal.html"> <p id="blink">New Gallery</p></a>
+    <a href="gal.html"> <p id="blink">New Gallery!</p></a>
     <script type="text/javascript">
       var blink = document.getElementById('blink');
       setInterval(function() {
