--- a/index.html
+++ b/index.html
@@ -314,8 +314,8 @@ html {
    </style>
   </head>
   <body>
-    <a href="gal.html"> <p id="blink">New Gallery</p></a><iframe src="http://free.timeanddate.com/clock/i7fc3354/n438/tlin/fn2/tcccc/ftb/bo2/pd2/th2/ts1/ta1" frameborder="0" width="105" height="23"></iframe>
-
+    <a href="gal.html"> <p id="blink">New Gallery</p></a>
+    <p><iframe src="http://free.timeanddate.com/clock/i7fc3354/n438/tlin/fn2/tcccc/ftb/bo2/pd2/th2/ts1/ta1" frameborder="0" width="105" height="23"></iframe></p>
     <script type="text/javascript">
       var blink = document.getElementById('blink');
       setInterval(function() {
