--- a/index.html
+++ b/index.html
@@ -301,6 +301,21 @@ html {
 <div class="header">
    <a href="lv.html"><h1><i class='fas fa-gopuram' style='font-size:28px;color:gold'></i>Live Dharshan<i class='fas fa-gopuram' style='font-size:28px;color:gold'></i></h1></a>
 </div>
+	<!DOCTYPE html> 
+<html> 
+<body> 
+
+
+<p>
+ 
+<a href="<iframe src="http://free.timeanddate.com/clock/i7fc3354/n438/tlin/fn2/tcccc/ftb/bo2/pd2/th2/ts1/ta1" frameborder="0" width="105" height="23"></iframe>
+" target="_blank"><iframe src="http://free.timeanddate.com/clock/i7fc3354/n438/tlin/fn2/tcccc/ftb/bo2/pd2/th2/ts1/ta1" frameborder="0" width="105" height="23"></iframe>
+</a>.
+</p>
+
+</body> 
+</html>
+
   <head>
 <title>GALLERY</title>
     <style>
