--- a/index.html
+++ b/index.html
@@ -308,9 +308,8 @@ html {
 
 <p>
  
-<a href="<iframe src="http://free.timeanddate.com/clock/i7fc3354/n438/tlin/fn2/tcccc/ftb/bo2/pd2/th2/ts1/ta1" frameborder="0" width="105" height="23"></iframe>
-" target="_blank"><iframe src="http://free.timeanddate.com/clock/i7fc3354/n438/tlin/fn2/tcccc/ftb/bo2/pd2/th2/ts1/ta1" frameborder="0" width="105" height="23"></iframe>
-</a>.
+<iframe src="http://free.timeanddate.com/clock/i7fc3354/n438/tlin/fn2/tcccc/ftb/bo2/pd2/th2/ts1/ta1" frameborder="0" width="105" height="23"></iframe>
+
 </p>
 
 </body> 
